# MINIJavaCompiler

./: .gitignore  CMakeLists.txt  README.md
AST-and-Visitors/: CMakeLists.txt  elements.h  main.cpp  parser.y
AST-and-Visitors/BinaryOperator/: DivOperator.cpp  DivOperator.h  EqualOperator.h  MulOperator.cpp  OrOperator.cpp  PlusOperator.h  ProcOperator.cpp
AST-and-Visitors/Classes/: Class.h
AST-and-Visitors/Expression/: BoolExpression.cpp  BoolExpression.h  Expression.h  NumberExpression.h  UnarMinusExpression.cpp
AST-and-Visitors/Lvalue/: SimpleLvalue.cpp  SimpleLvalue.h
AST-and-Visitors/Main/: Main.cpp
AST-and-Visitors/Program/: Program.cpp
AST-and-Visitors/Statements/: AssertStatement.cpp  AssignStatement.cpp
AST-and-Visitors/TestJavaFiles/: test1.java
AST-and-Visitors/Visitors/: Visitor.h
AST-interpriter/: CMakeLists.txt  driver.cpp  location.hh  parser.hh  parser.y  scanner.cpp  scanner.h  scanner.l
Functions/: CMakeLists.txt  Formals.cpp  Formals.h  driver.cpp  forward_declaration.h  parser.y
Functions/BaseElement/: BaseElement.h
Functions/BinaryOperator/: AndOperator.cpp  DivOperator.cpp  EqualOperator.cpp  LessOperator.cpp  MinusOperator.cpp  MoreOperator.cpp  MulOperator.cpp  MulOperator.h  OrOperator.cpp  OrOperator.h  PlusOperator.cpp  ProcOperator.cpp
Functions/Classes/: Class.cpp  Class.h  ClassesList.cpp
Functions/Declarations/: DeclarationList.cpp  DeclarationList.h  MethodDecl.cpp  MethodDecl.h  VarDecl.cpp
Functions/Expression/: ArrayGetExpression.cpp  ArrayRvalueExpression.cpp  BinaryCallExpression.cpp  BoolExpression.cpp  ExprList.cpp  GetLengthExpression.cpp  GetLengthExpression.h  IdentCreateExpression.cpp  IdentExpression.cpp  IdentExpression.h  InvokeExpression.cpp  InvokeExpression.h  NotExpression.cpp  NumberExpression.cpp  ThisExpression.cpp  UnarMinusExpression.cpp
Functions/Location/: Location.cpp  Location.h
Functions/Lvalue/: ArrayElementLvalue.cpp  ArrayLvalue.cpp  Lvalue.cpp  SimpleLvalue.cpp
Functions/Main/: Main.cpp  Main.h
Functions/Program/: Program.cpp
Functions/Statements/: AssertStatement.cpp  AssignStatement.cpp  IfElseStatement.cpp  IfStatement.cpp  MethodInvokeStatement.cpp  OutStatement.cpp  ReturnStatement.cpp  ReturnStatement.h  ScopeDeclStatement.cpp  ScopeDeclStatement.h  StatementsList.cpp  WhileStatement.cpp
Functions/SymbolTable/: ScopeLayer.cpp  ScopeLayer.h
Functions/TestJavaFiles/: test1.java  test2.java  test4.java
Functions/Types/: FunctionObject.h  IdentObject.cpp  IdentObject.h  Integer.cpp  SimpleObject.h  UninitObject.h
Functions/Visitors/: FunctionCallVisitor.cpp  TemplateVisitor.cpp  TemplateVisitor.h  TreeBuilder.cpp  TreeBuilder.h
Functions/function-mechanism/: FunctionStorage.cpp
IRTree-building/: CMakeLists.txt  driver.cpp  main.cpp
IRTree-building/Grammar/: CMakeLists.txt  location.hh  parser.cpp  parser.hh  parser.y  scanner.cpp  scanner.l
IRTree-building/Grammar/BinaryOperator/: AndOperator.cpp  AndOperator.h  BinaryOperator.h  DivOperator.cpp  DivOperator.h  MoreOperator.cpp  MulOperator.cpp
IRTree-building/Grammar/Classes/: Class.cpp  ClassesList.cpp
IRTree-building/Grammar/Declarations/: MethodDecl.cpp  VarDecl.cpp  VarDecl.h
IRTree-building/Grammar/Main/: Main.cpp
IRTree-building/SymbolTable/: ScopeLayer.cpp  ScopeLayer.h  ScopeLayerTree.cpp  ScopeLayerTree.h
IRTree-building/TestJavaFiles/: test1.java  test2.java  test3.java
IRTree-building/Visitors/: FunctionCallVisitor.cpp  FunctionCallVisitor.h  IrtreeBuildVisitor.cpp  IrtreeBuildVisitor.h  TemplateVisitor.cpp  TemplateVisitor.h  TreeBuilder.cpp  TreeBuilder.h
IRTree-building/function-mechanism/: Frame.h  FrameEmulator.cpp  FrameEmulator.h  FrameTranslator.cpp  FrameTranslator.h  FunctionStorage.h  FunctionTable.h
IRTree-building/irtree/: CMakeLists.txt
Interpreter/: CMakeLists.txt  Readme.md  driver.cpp
Interpreter/Grammar/: CMakeLists.txt  elements.h  location.hh  parser.cpp  parser.hh  parser.y
Interpreter/SymbolTable/: ScopeLayerTree.cpp  ScopeLayerTree.h  Symbol.cpp  Symbol.h
Interpreter/TestJavaFiles/: error1.java  test1.java  test2.java  test3.java
Interpreter/Visitors/: FunctionCallVisitor.cpp  FunctionCallVisitor.h  TemplateVisitor.cpp  TreeBuilder.cpp  TreeBuilder.h
Interpreter/function-mechanism/: Frame.cpp  Frame.h  FunctionStorage.h  FunctionTable.cpp
Interpreter/include/: driver.hh
Scopes/: CMakeLists.txt  driver.cpp  driver.hh  elements.h  forward_declaration.h  main.cpp  parser.y  scanner.l
Scopes/BinaryOperator/: AndOperator.cpp  AndOperator.h  BinaryOperator.h  DivOperator.cpp  DivOperator.h  EqualOperator.cpp  EqualOperator.h  LessOperator.cpp  LessOperator.h  MinusOperator.cpp  MinusOperator.h  MoreOperator.cpp  MoreOperator.h  MulOperator.cpp  MulOperator.h  OrOperator.cpp  OrOperator.h  PlusOperator.cpp  PlusOperator.h  ProcOperator.cpp  ProcOperator.h
Scopes/Declarations/: VarDecl.cpp  VarDecl.h
Scopes/Expression/: ArrayGetExpression.h  ArrayRvalueExpression.h  BoolExpression.cpp  BoolExpression.h  NotExpression.h  NumberExpression.cpp  NumberExpression.h
Scopes/Lvalue/: ArrayElementLvalue.cpp  ArrayLvalue.cpp  ArrayLvalue.h  Lvalue.cpp  Lvalue.h  SimpleLvalue.cpp  SimpleLvalue.h
Scopes/Statements/: AssertStatement.h  IfElseStatement.h  IfStatement.cpp  IfStatement.h  OutStatement.cpp  WhileStatement.cpp  WhileStatement.h
Scopes/SymbolTable/: ScopeLayer.cpp  ScopeLayer.h  ScopeLayerTree.cpp  ScopeLayerTree.h  Symbol.h
Scopes/TestJavaFiles/: test1.java  test2.java  test3.java  test4.java
Scopes/Types/: ArrayObject.cpp  ArrayObject.h  BasicObject.cpp  BasicObject.h  Bool.cpp  Bool.h  IdentObject.cpp  IdentObject.h  Integer.cpp  Integer.h  Object.cpp  Object.h  SimpleObject.cpp  SimpleObject.h  UninitObject.cpp  UninitObject.h
Scopes/Visitors/: Interpreter.cpp  Interpreter.h  PrintVisitor.cpp  PrintVisitor.h  TreeBuilder.cpp  TreeBuilder.h  Visitor.h
naive-interpreter/: CMakeLists.txt  location.hh  main.cpp  parser.cpp  parser.y  scanner.l
naive-interpreter/testing/: CMakeCache.txt  Makefile  NativeInterpreter  cmake_install.cmake
(+167 files in other folders)
